--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
 group 'ru.netology'
 version '1.0-SNAPSHOT'
 
+sourceCompatibility = 11
+
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 repositories {
     mavenCentral()
 }
@@ -12,6 +17,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.2.3'
 }
 
 test {
